--- a/wiki/ifoneBookToDoList.wiki
+++ b/wiki/ifoneBookToDoList.wiki
@@ -6,7 +6,7 @@
 
 *GUI:*
   # ~~Create a Message Box type dialog.~~ - _Done_
-  # Make memory info work.
+  # ~~Make memory info work.~~ - _Done_
   # ~~On incoming skype call add Accept button.~~ - _Done_
   # ~~Improve statup-time by rewritting the make WindowTransparentByMask function~~ _Done_. Performance improved by *~x30*
 
