Edited wiki page through web user interface.

--- a/wiki/ifoneBookToDoList.wiki
+++ b/wiki/ifoneBookToDoList.wiki
@@ -1,3 +1,5 @@
+[http://www.alcpu.com/Hidden_Stuff/iPhoneBook.rar Download latest build]
+
 ==To do list:==
 
   # Create a PDF user's manual. - a user's manual is done. need to create a PDF.
