Edited wiki page through web user interface.

--- a/wiki/ifoneBookToDoList.wiki
+++ b/wiki/ifoneBookToDoList.wiki
@@ -1,6 +1,4 @@
 #labels Featured
-[http://www.alcpu.com/Hidden_Stuff/iPhoneBook.rar Download latest build]
-
 ==To do list:==
 
   # Create a PDF user's manual. - a user's manual is done. need to create a PDF.
@@ -8,7 +6,7 @@
   # Create a mini-website.
 
 *GUI:*
-  # Make the Call Mode background image darker (also need to edit the last lines in "main_wnd_under_date_bg.bmp" to match the darker color)
+  # ~~Make the Call Mode background image darker (also need to edit the last lines in "main_wnd_under_date_bg.bmp" to match the darker color)~~ - _Done_
   # ~~Play with PromptBox opacity for best eye-candy and readibility.~~ - _Done_
   # ~~Create a Message Box type dialog.~~ - _Done_
   # ~~Make memory info work.~~ - _Done_
